Fix centering and left alignment. Add tabbing though grid.

--- a/src/routes/grid.css
+++ b/src/routes/grid.css
@@ -1,6 +1,7 @@
 .grid {
 	white-space: nowrap;
 	display: flex;
+	justify-content: center;
 	flex-wrap: wrap;
 	box-sizing: border-box;
 	width: 100%;
@@ -25,6 +26,10 @@
 	text-overflow: ellipsis;
 	margin-top: 0;
 	margin-bottom: 8px;
+}
+.grid .grid-spacer {
+	width: 377px;
+	height: 0;
 }
 @media screen and (max-width: 785px) {
 	h1 {
